--- a/components/sjm-py-tastpa-203/overlays/stage/deployment-patch.yaml
+++ b/components/sjm-py-tastpa-203/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
+      - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/sjm-py-tastpa-203:c706850358b321b13dc8eec31e593d15d4c00c28@sha256:611a6adab848ee5e8c260f8a1d750e983ac3be8f5724d300716ca6101948f48a
         name: container-image  
